2005-06-10  Derek Price  <derek@ximbiot.com>

	* logmsg.c (logmsg_list_to_args_proc): Add format character for
	destination tag.
	(Original patch from Todd Vierling <tv@duh.org>).

	* tag.c (pretag_list_to_args_proc): Likewise.
	(check_fileproc): Set destination tag name.
	(tag_delproc): Delete destination tag name.
	* sanity.sh (info, taginfo): Test new format strings.

2005-06-08  Derek Price  <derek@ximbiot.com>

	* parseinfo.c: Restore comparison to NULL in assignment within
	conditional to placate non-GNU compilers.  Eliminate assignments in
	conditionals where possible by GNU coding standards.  Eliminate other
	comparisons to NULL where possible.
	(Parse_Info): Make int a true bool.

2005-06-03  Derek Price  <derek@ximbiot.com>

	* client.c (force_gzip): New static global.
	(handle_force_gzip): New function.
	(responses): Add `Force-gzip'.
	(start_server): Turn on encryption and compression before potentially
	sending other rooted requests.  Turn on compression when requested by
	the user or the server.
	* main.c (opt_usage):  Note that -z<level> *requests* compression
	<level> from the server.
	* parseinfo.c (new_config):  Initialize MaxCompressionLevel.
	(parse_config): Parse MinCompressionLevel & MaxCompressionLevel.
	* parseinfo.h (struct config): Add MinCompressionLevel &
	MaxCompressionLevel.
	* server.c (pending_warning_text):  New static global.
	(print_pending_error): Print pending warnings too.
	(warning_pending): New macro.
	(alloc_pending_internal): New function with much content...
	(alloc_pending): ...previously from here.
	(alloc_pending_warning): New function.
	(server_root, serve_gzip_contents, gzip_stream): Force gzip_level into
	configured restrictions.
	(serve_command_prep): Print pending errors.
	(requests): Make `Gzip-stream', `gzip-file-contents',
	`Kerberos-encrypt', `Gssapi-encrypt', & `Gssapi-authenticate' requests
	rootless to allow them before compression starts.
	(serve_valid_requests): Send `Force-gzip' response when needed.